updated readme title, fixed a bug where nav bar wasn't showing on mobile site

--- a/styles/main.scss
+++ b/styles/main.scss
@@ -143,7 +143,7 @@ footer {
 }
 
 //Navigation Panel
-.cf {
+nav {
   height: 40px;
   width: 100%;
   background-color: #333;
